examples/ok/prelude_only.hax
module examples::prelude_only;

import std::prelude;

pub sub main() -> Void {
  println("prelude_only ok");
}
