examples/fail/return_value_in_void.hax
module ZZZ::ReturnValueInVoid;

sub main() -> Void {
  return 1;
}
